fixed dark mode bug in admin module

--- a/src/@Core-scss/dark-theam.scss
+++ b/src/@Core-scss/dark-theam.scss
@@ -1,5 +1,5 @@
 .dark-theme {
-    background: rgba(10, 6, 10, 1);
+    background: rgba(10, 6, 10, 1) ;
 
     h1,
     h2,
@@ -42,7 +42,7 @@
     .form-control {
         background-color: #212529 !important;
         border: 1px solid #495057;
-        color: #dee2e6;
+        color: #dee2e6 !important;
     }
 
     .input {
